# KeyStart

./: .gitignore  pyproject.toml
backend/: app.py  constants.py
backend/providers/: gcp_upload.py
backend/routers/: gcp_upload_router.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
